samples/_failures_safe/1761156052_135d3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_aadd9aa5.c:130:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  130 | int main
      | ^~~
